make the sticky header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,57 @@
     <title>Product Landing Page FCC03</title>
 </head>
 <body>
-    
+    <header id="header">
+        <div id="header-img">
+            <img src="images/engnite-logo.png" alt="Engnite Logo" id="engnite-logo">
+        </div>
+        <nav id="nav-bar">
+            <a href="#" class="nav-link">Who we are</a>
+            <a href="#" class="nav-link">Our students</a>
+            <a href="#" class="nav-link">Enroll now</a>
+        </nav>
+    </header>
+
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
+    <p>1</p>
 </body>
 </html>
