make it FCC test compatible

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header id="header">
-        <div id="header-img">
-            <img src="images/engnite-logo.png" alt="Engnite Logo" id="engnite-logo">
+        <div id="header-img-container">
+            <img src="images/engnite-logo.png" alt="Engnite Logo" id="header-img">
         </div>
         <nav id="nav-bar">
             <a href="#who-we-are" class="nav-link">Who we are</a>
@@ -70,8 +70,8 @@
     <div class="flex-center section" id="enroll-now">
         <form action="https://www.freecodecamp.org/email-submit" method="POST" name="enroll-email" class="form-flex" id="form">
             <label for="email" class="item">Start your Journey today, enroll now!</label>
-            <input type="email" placeholder="Enter you email" id="email" class="item">
-            <button type="submit" class="item" id="submit">Submit</button>
+            <input type="email" placeholder="Enter you email" id="email" class="item" name="email">
+            <input type="submit" class="item button" id="submit">
         </form>
     </div>
     <footer>
